code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__model_selection_visibility__credentialed_provider_list.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2734
expression: credentialed_frame
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+










   +


















   +






 ★   /kay - perform a coding task (multiple agents)


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 +----------------------------------- Select Model & Reasoning -----------------------------------+
 | Current model: OPENCODE-Go/kimi-K2.6                                                           |
 | Reasoning effort: Low                                                                          |
 |                                                                                                |
 | Mode Settings                                                                                  |
 | Fast mode speeds up replies. 1M Context is available on supported models.                      |
 | › Fast Mode: disabled                                                                          |
 |   1M Context: unavailable                                                                      |
 | Unavailable for this model. Saved settings apply automatically on supported models.            |
 |                                                                                                |
 | OpenCode Go                                                                                    |
 | KIMI-K2.6                                                                                      |
 |    High - opencode high reasoning                                                              |
 |    Low (current) - opencode low reasoning                                                      |
 |                                                                                                |
 | MiniMax                                                                                        |
 | MINIMAX-M2.7                                                                                   |
 |    Low - minimax reasoning                                                                     |
 |                                                                                                |
 | OpenAI                                                                                         |
 | GPT-5.4                                                                                        |
 | Brings together flagship reasoning, coding, and tool use in a single frontier model.           |
 |    Medium - openai medium reasoning                                                            |
 |                                                                                                |
 | ↑↓ Navigate  Enter Select  Esc Cancel                                                          |
 +------------------------------------------------------------------------------------------------+
