code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__model_selection_visibility__empty_credentials_hint.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2754
expression: empty_frame
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 ★   /kay - perform a coding task (multiple agents)


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 +----------------------------------- Select Model & Reasoning -----------------------------------+
 | Current model: GPT-5.4                                                                         |
 | Reasoning effort: Low                                                                          |
 |                                                                                                |
 | Mode Settings                                                                                  |
 | Fast mode speeds up OpenAI replies. 1M Context is available on supported models.               |
 | › Fast Mode: disabled                                                                          |
 |   1M Context: auto                                                                             |
 | Press Enter to cycle Disabled, Enabled, and Auto.                                              |
 |                                                                                                |
 | No models are unlocked yet.                                                                    |
 |                                                                                                |
 | ↑↓ Navigate  Enter Select  Esc Cancel                                                          |
 +------------------------------------------------------------------------------------------------+
